# serializer version: 1
# name: test_loader_schema
  dict({
    'additionalProperties': False,
    'properties': dict({
      'key': dict({
        'title': 'Key',
        'type': 'string',
      }),
    }),
    'required': list([
      'key',
    ]),
    'title': 'SimpleAssetBlueprint',
    'type': 'object',
  })
# ---
# name: test_loader_schema_sequence
  dict({
    '$defs': dict({
      'SimpleAssetBlueprint': dict({
        'additionalProperties': False,
        'properties': dict({
          'key': dict({
            'title': 'Key',
            'type': 'string',
          }),
        }),
        'required': list([
          'key',
        ]),
        'title': 'SimpleAssetBlueprint',
        'type': 'object',
      }),
    }),
    'items': dict({
      '$ref': '#/$defs/SimpleAssetBlueprint',
    }),
    'type': 'array',
  })
# ---
# name: test_loader_schema_union
  dict({
    '$defs': dict({
      'BarAssetBlueprint': dict({
        'additionalProperties': False,
        'properties': dict({
          'string': dict({
            'title': 'String',
            'type': 'string',
          }),
          'type': dict({
            'const': 'bar',
            'default': 'bar',
            'title': 'Type',
            'type': 'string',
          }),
        }),
        'required': list([
          'string',
        ]),
        'title': 'BarAssetBlueprint',
        'type': 'object',
      }),
      'FooAssetBlueprint': dict({
        'additionalProperties': False,
        'properties': dict({
          'number': dict({
            'title': 'Number',
            'type': 'integer',
          }),
          'type': dict({
            'const': 'foo',
            'default': 'foo',
            'title': 'Type',
            'type': 'string',
          }),
        }),
        'required': list([
          'number',
        ]),
        'title': 'FooAssetBlueprint',
        'type': 'object',
      }),
    }),
    'anyOf': list([
      dict({
        '$ref': '#/$defs/FooAssetBlueprint',
      }),
      dict({
        '$ref': '#/$defs/BarAssetBlueprint',
      }),
    ]),
  })
# ---
